...
            "state" : "translated",
            "value" : "Enfermedad renal crónica"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
          }
...
            "state" : "translated",
            "value" : "días"
          }
        }
      }
    },
    "Debug" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debug"
          }
...
